# sandbox

./: .gitignore
extention-bookmark-tag/: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  wxt.config.ts
extention-bookmark-tag/.github/: copilot-instructions.md
extention-bookmark-tag/assets/css/: tailwind.css
extention-bookmark-tag/components/: BaseButton.vue  BatchEditForm.vue  BookmarkItem.vue  EditIcon.vue  EmptyStateMessage.vue  FolderItem.vue  FolderView.vue  HelloWorld.vue  IconButton.vue  LoadingIndicator.vue  PageHeader.vue  SearchBox.vue  SectionHeader.vue  SelectedBookmarkList.vue  TagAddButton.vue  TagBadge.vue
extention-bookmark-tag/entrypoints/options/: App.vue  Options.vue  OptionsPage.vue  index.html  main.ts
extention-bookmark-tag/entrypoints/popup/: App.vue  Popup.vue  PopupPage.vue  main.ts
extention-bookmark-tag/utils/: bookmarkUtils.ts  tabUtils.ts  tagUtils.ts
gas/: .clasp.json  package.json
mcp/: package-lock.json  package.json
my-react-router-app/: package.json  pnpm-lock.yaml
my-react-router-app/app/: root.tsx  routes.ts
my-react-router-app/app/components/: Child.tsx
my-react-router-app/app/routes/: home.tsx  test.tsx
python/: .gitignore  README.md  a.xml  pyproject.toml
python/src/: main.py  obsidian_to_zenn.py
python/tests/: test_python_env.py
regex-url-blocker/: .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  wxt.config.ts
regex-url-blocker/.github/: .cursorrules  copilot-instructions.md
regex-url-blocker/assets/css/: tailwind.css
regex-url-blocker/entrypoints/options/: index.html
serverless-flamerok-go/: go.mod  package.json  serverless.yml
typescript/: package.json  tsconfig.json  type.json
typescript/src/: main.js  main.ts  newFile.ts
typescript/src/@types/: get.d.ts
vue-project/: README.md  package.json
