[tool.poetry]
name = "python-env"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pylint = "^2.5"
isort = "^5.9.3"
mypy = "^0.941"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
main = "src.main:main"

# blackとの競合回避 https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"